* Structure clean up