@@ -4,14 +4,11 @@ import javafx.application.Application;
 import javafx.fxml.FXMLLoader;
 import javafx.scene.Parent;
 import javafx.scene.Scene;
-import javafx.scene.control.Control;
 import javafx.scene.image.Image;
 import javafx.stage.Stage;
-import planner.app.PlannerApplication;
 
 public class Main extends Application {
-    // To run javaFX; --module-path ${PATH_TO_FX11} --add-modules=javafx.controls,javafx.fxml
-    // The resource folder has to be marked as such in project structure
+
     @Override
     public void start(Stage primaryStage) throws Exception{
 
@@ -22,7 +19,6 @@ public class Main extends Application {
         primaryStage.getIcons().add(new Image("/pictures/plannericon.png"));
         primaryStage.show();
     }
-
 
     public static void main(String[] args) {
         launch(args);
